minor center alignment fix

--- a/server/try2/style.css
+++ b/server/try2/style.css
@@ -480,6 +480,7 @@ h1.welcome-heading, p.welcome-para, .welcome-buttons > button, .welcome-buttons 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    text-align: center;
 }
 
 .contact-us .contact-numbers{
@@ -490,6 +491,9 @@ h1.welcome-heading, p.welcome-para, .welcome-buttons > button, .welcome-buttons 
 }
 
 .contact-us .numbers, .address, .open-hours{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     color: white;
     max-height: 320px;
     width: 360px;
